<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custombackground"
    tools:context=".Parameter_Activity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/menu"
        app:itemIconSize="24dp"
        app:itemIconTint="@drawable/menu_color"
        app:itemTextColor="@drawable/menu_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/param"
        android:textColor="#401212"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="72dp"
        android:ems="6"
        android:gravity="center_horizontal"
        android:hint="@string/weight"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.425" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="72dp"
        android:ems="6"
        android:gravity="center_horizontal"
        android:hint="@string/rost"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.425" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:ems="6"
        android:gravity="center_horizontal"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="#401212"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="418dp"
        android:layout_height="31dp"
        android:gravity="center"
        android:text="@string/active"
        android:textColor="#401212"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_norm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/bard"
            android:checked="true"
            android:text="@string/min"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/bard"
            android:text="@string/low"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_3"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/bard"
            android:text="@string/middle"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_4"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/bard"
            android:text="@string/high"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_5"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/bard"
            android:text="@string/max"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_norm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_dialog"
        android:onClick="onClick_Calc"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="412dp"
        android:layout_height="79dp"
        android:layout_marginStart="44dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radio_w"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/bard"
            android:checked="true"
            android:text="@string/woman"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="@color/bard"
            android:text="@string/man"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/kkal"
        android:textColor="#401212"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_norm" />

</androidx.constraintlayout.widget.ConstraintLayout>